--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {  
     margin: 100px 158px;
     font-family: arial;
+    background-image: url(https://media.istockphoto.com/photos/red-power-cable-picture-id465766300?k=20&m=465766300&s=170667a&w=0&h=zvqv3uu4GvN8L5UO8-VQLTlh2wVN2D-FsPPjsCMMJms=);
     }  
 
 button {
@@ -23,4 +24,9 @@ h2 {
 h4 {
     font-size: 26px;
     text-align: center;
+}
+
+div {
+    background: whitesmoke;
+    opacity: 0.9;
 }
